# tada

./: .gitignore  README.md  pyproject.toml
apple/: Makefile  README.md  pyproject.toml
apple/mlx_tada/: __init__.py  aligner.py  audio.py  config.py  convert.py  convert_1b.py  convert_3b.py  decoder.py  encoder.py  generate.py  llm.py  model.py  utils.py  vibevoice.py
apple/tests/: test_aligner.py
tada/modules/: encoder.py  tada.py
tada/nn/: vibevoice.py
