[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-tada"
version = "0.1.0"
description = "Text-Acoustic Dual-Aligned Language Model for MLX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.30.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "transformers>=4.40.0",
    "soundfile>=0.12.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
convert = [
    "torch>=2.0.0",
    "huggingface-hub>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["mlx_tada*"]
